@@ -220,6 +220,8 @@ class MainWindow(qt.QMainWindow):
              self.slotFileQuit, 'stock-quit.png', False, 'Ctrl+Q'),
             ('dataimport', 'Import data into Veusz', '&Import...', 'data',
              self.slotDataImport, 'stock-import.png', False, ''),
+            ('dataimport2d', 'Import 2D data into Veusz', 'Import &2D...', 'data',
+             self.slotDataImport2D, 'stock-import.png', False, ''),
             ('dataedit', 'Edit existing datasets', '&Edit...', 'data',
              self.slotDataEdit, 'stock-edit.png', False, ''),
             ('datacreate', 'Create new datasets', '&Create...', 'data',
@@ -309,6 +311,11 @@ class MainWindow(qt.QMainWindow):
     def slotDataImport(self):
         """Display the import data dialog."""
         d = dialogs.importdialog.ImportDialog(self, self.document)
+        d.show()
+
+    def slotDataImport2D(self):
+        """Display the 2D import data dialog."""
+        d = dialogs.importdialog.ImportDialog2D(self, self.document)
         d.show()
 
     def slotDataEdit(self):
