@@ -1,3 +1,7 @@
+* 2005-07-03 Jeremy Sanders <jeremy@jeremysanders.net>
+	- 2D data import dialog
+	- Improvements to 1D data import dialog
+	
 * 2005-07-02 Jeremy Sanders <jeremy@jeremysanders.net>
 	- 2D datasets can be saved
 	- 2D datasets can be imported
